<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="marvelousboomerangmoose.shoppingwithfriends.HomeActivity"
    android:background="@color/teal"
    tools:ignore="MergeRootFrame" >


        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:id="@+id/button6"
            android:clickable="true"
            android:onClick="logoutOnClick"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_friend_list"
            android:id="@+id/button7"
            android:layout_gravity="center"
            android:onClick="currentFriendsOnClick"
            android:layout_below="@+id/button6"
            android:layout_alignParentStart="true"
            android:clickable="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_users"
            android:id="@+id/button8"
            android:clickable="true"
            android:onClick="activeUsersOnClick"
            android:layout_alignTop="@+id/button7"
            android:layout_alignEnd="@+id/textView14" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_interest"
            android:id="@+id/button9"
            android:onClick="buttonItemListOnClick"
            android:layout_below="@+id/button7"
            android:layout_alignParentStart="true"
            android:clickable="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_sale"
            android:id="@+id/button10"
            android:clickable="true"
            android:onClick="reportSaleOnClick"
            android:layout_below="@+id/button8"
            android:layout_alignStart="@+id/button8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/interested_items_on_sale"
            android:id="@+id/textView14"
            android:layout_below="@+id/button9"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listView3"
            android:layout_below="@+id/textView14"
            android:layout_alignParentStart="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sales_map"
            android:id="@+id/salesMapButton"
            android:onClick="salesMapOnClick"
            android:clickable="true"
            android:layout_below="@+id/button9"
            android:layout_alignParentStart="true" />
</RelativeLayout>
