<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/teal"
    tools:context="marvelousboomerangmoose.shoppingwithfriends.CurrentFriendDetailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/friend_data"
        android:id="@+id/friendData"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/first_name"
        android:id="@+id/firstNameHeader"
        android:layout_below="@+id/friendData"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/last_name"
        android:id="@+id/lastNameHeader"
        android:layout_below="@+id/firstNameHeader"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email_address"
        android:id="@+id/emailHeader"
        android:layout_below="@+id/lastNameHeader"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user_name"
        android:id="@+id/userNameHeader"
        android:layout_below="@+id/emailHeader"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/medium_text"
        android:id="@+id/firstName"
        android:layout_above="@+id/lastNameHeader"
        android:layout_alignStart="@+id/lastName"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/medium_text"
        android:id="@+id/lastName"
        android:layout_alignTop="@+id/lastNameHeader"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/medium_text"
        android:id="@+id/emailAddress"
        android:layout_alignTop="@+id/emailHeader"
        android:layout_alignStart="@+id/lastName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/medium_text"
        android:id="@+id/userName"
        android:layout_below="@+id/emailAddress"
        android:layout_alignStart="@+id/emailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/rating"
        android:id="@+id/ratingHeader"
        android:layout_below="@+id/userNameHeader"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/medium_text"
        android:id="@+id/rating"
        android:layout_below="@+id/userName"
        android:layout_alignStart="@+id/userName" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_friend"
        android:id="@+id/deleteFriendButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="103dp"
        android:onClick="deleteFriendOnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sales_reports"
        android:id="@+id/textView4"
        android:layout_below="@+id/ratingHeader"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/medium_text"
        android:id="@+id/textView5"
        android:layout_below="@+id/rating"
        android:layout_alignStart="@+id/rating" />
</RelativeLayout>
