<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/teal"
    tools:context="marvelousboomerangmoose.shoppingwithfriends.ActiveUsersDetailActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/active_user_data"
        android:id="@+id/activeUserData"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/first_name"
        android:id="@+id/activeFirstNameHeader"
        android:layout_below="@+id/activeUserData"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/last_name"
        android:id="@+id/activeLastNameHeader"
        android:layout_below="@+id/activeFirstNameHeader"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email_address"
        android:id="@+id/activeEmailHeader"
        android:layout_below="@+id/activeLastNameHeader"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user_name"
        android:id="@+id/activeUserNameHeader"
        android:layout_below="@+id/activeEmailHeader"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/medium_text"
        android:id="@+id/activeFirstName"
        android:layout_above="@+id/activeLastNameHeader"
        android:layout_alignStart="@+id/activeLastName"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/medium_text"
        android:id="@+id/activeLastName"
        android:layout_alignTop="@+id/activeLastNameHeader"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/medium_text"
        android:id="@+id/activeEmailAddress"
        android:layout_alignTop="@+id/activeEmailHeader"
        android:layout_alignStart="@+id/activeLastName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/medium_text"
        android:id="@+id/activeUserName"
        android:layout_below="@+id/activeEmailAddress"
        android:layout_alignStart="@+id/activeEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/rating"
        android:id="@+id/activeRatingHeader"
        android:layout_below="@+id/activeUserNameHeader"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/medium_text"
        android:id="@+id/activeRating"
        android:layout_below="@+id/activeUserName"
        android:layout_alignStart="@+id/activeUserName" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_friend"
        android:id="@+id/addFriendButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="103dp"
        android:onClick="addFriendOnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sales_reports"
        android:id="@+id/textView2"
        android:layout_below="@+id/activeRatingHeader"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/medium_text"
        android:id="@+id/textView3"
        android:layout_below="@+id/activeRating"
        android:layout_alignStart="@+id/addFriendButton" />

</RelativeLayout>
